# pka_site_backend

./: .env  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  dump.rdb  load_test_k6.js  nginx.conf  pka_db.sqlite3  pka_episode_list.json
.github/workflows/: build-test.yml  delpoy.yml  deploy.yml  rust.yml
.sqlx/: query-1583109ffb86da059fcb1518894020456db88900f1f93cad9d6b416bf4654a6c.json  query-5b64eaf606f296634feac4f9d7ef2606cc4f686aaa6dbc2e62f0fa5bd457a14a.json  query-5e7f92e078c20816c830624e39a19d495964c8c88b3dfb7f2be31e10f038259f.json  query-6e6e4c92f9909d6d6d89b1bb86bd1fcf92d41acaad3874469f82ea371d6dd73f.json  query-7d36c299ffe39c95699c565d919e78c4089dd4045a9a37acd77ba493d51aa069.json  query-9201a1843e81d7114e997181b2b7d0c8c01f3ab33bdcc4d56b39a29579f5180b.json  query-9ad76e48d5d2a564373f96f1677e5af09a15f4faea7a80242c3ff496df8be2ff.json  query-a3b7d9c2d6bf9c8343e56c9a3a9304a128d4346aab63730ad95f106cc7d5a60d.json  query-aa3f1d79e834b06320eab84b384efad4f2a1f031e40215494bcce47ef6808099.json  query-b56c04d44c2d468a9ac254226735b7f03cddfcb1a670a37eb9c8d2025ea78583.json  query-be79baf6ae7be5a3140139547fbc44dafe6b9623de5dc21838c4a372b157e659.json  query-e4fca2da4615506eeb1aafdacbfdf0b3cf8dfd3e6d156adf03d737118021d2c8.json
flatbuff_schemas/: pka_event_search_results.fbs
front-end/: asset-manifest.json  index.html  manifest.json  precache-manifest.3d4781e63abd7a7c330e2f581883a68c.js  precache-manifest.43580568572f31230bafa7f9d5bc81ec.js  precache-manifest.4ea6cb001c49d02a2815e685359c1784.js  precache-manifest.9249f0e2d6002390ed78c68489ae81be.js  precache-manifest.c9e1d1764be4a8de1d56c0957475d168.js  precache-manifest.cc6cde9e041dc3fb30b3271214f9aed8.js  precache-manifest.d7223fe12e4c77686de19e5fd79fe76a.js  precache-manifest.dbbd461a6d96f431f09e1a888f32dcaa.js  precache-manifest.e389f779b05ed8ca33fdd648ca95e34f.js  precache-manifest.f9179699991de68a66af79487fc6c4ac.js  service-worker.js
front-end/static/css/: 2.3a1dadae.chunk.css  2.3a1dadae.chunk.css.map  2.9a1c5a22.chunk.css  2.9a1c5a22.chunk.css.map  main.8bac700c.chunk.css  main.8bac700c.chunk.css.map
front-end/static/js/: 2.1124651a.chunk.js  2.1124651a.chunk.js.LICENSE.txt  2.1124651a.chunk.js.map  2.58fda2aa.chunk.js  2.58fda2aa.chunk.js.LICENSE.txt  2.58fda2aa.chunk.js.map  2.aea16094.chunk.js  2.aea16094.chunk.js.map  2.ce621c12.chunk.js  2.ce621c12.chunk.js.map  2.dda58fd5.chunk.js  2.dda58fd5.chunk.js.map  (+20 more)
migrations/: 20200301124334_pka_episode.sql  20200301130012_pka_guest.sql  20200314142852_pka_event.sql  20200329181719_pka_youtube_details.sql
migrations/2020-03-01-124334_pka_episode/: down.sql  up.sql
migrations/2020-03-01-130012_pka_guest/: down.sql  up.sql
migrations/2020-03-14-142852_pka_event/: down.sql  up.sql
migrations/2020-03-29-181719_pka_youtube_details/: down.sql  up.sql
src/: app_state.rs  config.rs  db.rs  docs.rs  extractors.rs  main.rs  redis_db.rs  schema.rs  startup.rs  yt_api_key.rs
src/conduit/: mod.rs  pka_episode.rs  pka_guest.rs  pka_youtube_details.rs
src/flatbuffers/: mod.rs
src/handlers/: episode.rs  errors.rs  event.rs  mod.rs  search.rs  static_files.rs
src/models/: diesel_f32.rs  errors.rs  mod.rs  pka_episode.rs  pka_episode_with_all.rs  pka_event.rs  pka_guest.rs  pka_youtube_details.rs  rss_feed.rs  search.rs  sitemap_xml.rs  success_response.rs  updater.rs
src/routes/: docs.rs  episode.rs  episodes.rs  events.rs  front_end.rs  mod.rs  search.rs  static_assets.rs  static_files.rs
src/search/: mod.rs  pka_search.rs
src/updater/: initial_pka.rs  mod.rs  pka.rs  youtube_api.rs
src/workers/: events.rs  mod.rs  new_episode.rs
(+13 files in other folders)
