[package]
name = "pka_site_backend"
version = "0.1.0"
authors = ["Zak"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3" }
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
lazy_static = "1.4"
diesel = { version = "2", features = ["r2d2", "sqlite", "chrono", "extras"] }
chrono = { version = "0.4", features = ["serde"] }
float-ord = "0.3"
reqwest = { version = "0.11", features = ["gzip"] }
regex = "1"
quick-xml = { version = "0.27", features = ["serialize"] }
diesel-derive-newtype = "2.0.0-rc.0"
iso8601-duration = "0.1"
libsqlite3-sys = { version = "*", features = ["bundled"] }
redis = "0.22.1"
bb8-redis = "0.12.0"
rayon = "1.5"
flatbuffers = "22.9.29"
dotenv = "0.15.0"
strum = "0.24.1"
strum_macros = "0.24.3"

[profile.release]
lto = 'fat'
codegen-units = 1
