[package]
name = "pka_site_backend"
version = "0.1.0"
authors = ["Zak"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = "5.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
float-ord = "0.3"
reqwest = { version = "0.12", features = ["gzip"] }
regex = "1"
quick-xml = { version = "0.38", features = ["serialize"] }
iso8601-duration = { version = "0.2.0", features = ["chrono"] }
redis = "0.32.0"
bb8-redis = "0.24.0"
rayon = "1.5"
dotenv = "0.15.0"
strum = "0.27.1"
strum_macros = "0.27.1"
mimalloc = "0.1.39"
compact_str = { version = "0.9", features = ["serde", "sqlx-sqlite"] }
aho-corasick = "1.1.2"
bitcode = "0.6.0-beta.1"
async-compression = { version = "0.4.6", features = ["zstd", "tokio"] }
tower-http = { version = "0.6", features = ["cors"] }
thiserror = "2.0"
anyhow = "1"

[profile.release]
lto = 'fat'
codegen-units = 1
strip = true
